- removed code associated with creating and updating projects