@@ -19,7 +19,6 @@ import java.io.File;
 import java.io.IOException;
 import java.net.URISyntaxException;
 import java.net.URL;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.time.LocalDateTime;
 import java.util.Arrays;
@@ -89,11 +88,11 @@ public class JiraProjectReaderIntegrationTest {
 
         Project expectedFirstProject = new Project("Testkey 1", "Teststatus 1", "Testissuetype 1", "Testsummary 1", Arrays.asList("Testlabel 1", "Testlabel 2"),
                 "Testjob 1", "Testskills 1", "Testdescription 1", "Testlob 1", "Testcustomer 1", "Testlocation 1", "01.01.2018", "01.02.2018", "Testeffort 1", expectedCreated, expectedUpdated,
-                "Testfreelancer 1", "Testelongation 1", "Testother 1",  "Testrate 1", "Testcompensated 1", Project.Origin.JIRA);
+                "Testfreelancer 1", "Testelongation 1", "Testother 1",  "Testrate 1", "Testcompensated 1");
 
         Project expectedSecondProject = new Project("Testkey 2", "Teststatus 2", "Testissuetype 2", "Testsummary 2", Collections.emptyList(),
                 "Testjob 2", "Testskills 2", "Testdescription 2", "Testlob 2", "Testcustomer 2", "Testlocation 2", "02.01.2018", "02.02.2018", "Testeffort 2", expectedCreated, expectedUpdated,
-                "Testfreelancer 2", "Testelongation 2", "Testother 2",  "Testrate 2", "Testcompensated 2", Project.Origin.JIRA);
+                "Testfreelancer 2", "Testelongation 2", "Testother 2",  "Testrate 2", "Testcompensated 2");
 
         // when
         List<Project> projectList = reader.getInitialProjects();
@@ -117,7 +116,7 @@ public class JiraProjectReaderIntegrationTest {
         URL url = this.getClass().getResource("JiraJsonResponse.txt");
         File testJsonFile = new File(url.toURI());
 
-        return new String(Files.readAllBytes(testJsonFile.toPath().toAbsolutePath()), StandardCharsets.UTF_8);
+        return Files.readString(testJsonFile.toPath().toAbsolutePath());
     }
 
 }
